AUGREL/src/objects/Notification__c.object
<CustomObject>
    <description>Used to display notifications to agents on the cep hero bar, data can either be added via the import wizard or individually by an authorized user.</description>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date the notification will no longer be displayed</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <description>Relationship to Financial Account</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notification_Content__c</fullName>
        <description>Notification text to be displayed on the hero</description>
        <label>Notification Content</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if notification is a priority, if it is a priority will be displayed at the top of the notification list</description>
        <label>Priority Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the notification will be displayed</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <displayFormat>N-{0000000}</displayFormat>
        <label>Notification Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>